# project

./: CMakeLists.txt  README.md  send.bash  start.bash
inc/: 2048.h  font.h  lcd.h  link.h  pic.h  stack.h  touch.h
interface/PSD/: main.psd  wooden fish.psd
src/: 2048.c  font.c  lcd.c  link.c  main.c  pic.c  stack.c  touch.c
test/: main  main.c
